# wondoner-interfaces

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-test.yml
src/wondoner/interfaces/: __init__.py  enums.py  interfaces.py  models.py
src/wondoner_interfaces.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_enums.py  test_interfaces.py  test_models.py
